--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
-table{
+#beansNeeded{
 	border-color: black;
 	border-width: 2px;
 	border-style: solid;
+	background-color: green;
 }
 td {
 	border-color: black;
