both tables are currently working

--- a/style.css
+++ b/style.css
@@ -13,3 +13,12 @@ td {
 	border-style: solid;
 	background-color: green;
 }
+
+#homeLink{
+	text-decoration: none;
+	color: black;
+}
+#homeLink:hover{
+	color: green;
+	text-decoration: underline;
+}
