--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ input{
 	border-style: solid;
 	background-color: green;
 }
-#store-form{
+#form{
 	border: 3px solid red;
 	padding: 10px;
 	margin-top: 20px;
