--- a/home-style.css
+++ b/home-style.css
@@ -8,6 +8,9 @@ body{
 
 header{
 	color: white;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 }
 article{
 }
@@ -15,6 +18,11 @@ article{
 section{
 }
 section{
+}
+
+header a{
+	color: white;
+	text-decoration: none;
 }
 
 #story{
